--- a/_posts/2016-06-27-why-do-it.md
+++ b/_posts/2016-06-27-why-do-it.md
@@ -55,8 +55,8 @@ Check out these [stats.](http://stackoverflow.com/research/developer-survey-2016
 ##### But salary isn't enough, so why really do it?
 
 <hr>
-## Because you can make something stupid
-Or smart, clever, usefull, or helpfull..And love every minute of it.
+<h2 class="blue">Because you can make something!</h2>
+Something smart, or stupid, clever, usefull, or helpfull..And love every minute of it.
 
 This is what makes it worth it to me.  
 
